MultiHostQueryOp::PendingQueryContext::doBlockingQuery can leak a cursor object

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In MultiHostQueryOp::PendingQueryContext::doBlockingQuery , the result of calling doBlockingQuery is only noted, causing an ownership transfer, if the parent op still exists.

      In the case where the parentOp no longer exists after doBlockingQuery, the DBClientCursor object is not freed.

            Assignee:
            Andrew Morrow (Inactive)
            Reporter:
            Andrew Morrow (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: