SERVER-15632 Clean up cursor in MultiHostQuery if parent op has expired

(cherry picked from commit 7a7febfe1acd236ea11677638c0a8d5ddc6ceba6)